- Fix del issue #11, se estaba validando siempre el valor de la variable de session para evitar doble submit, incluso cuando era un request de tipo GET - Agregado el builder y nature de php al .project para que sea un poco mas IDE friendly (no se si en el PDT anda)

--- a/.project
+++ b/.project
@@ -4,8 +4,15 @@
 	<comment></comment>
 	<projects>
 	</projects>
+
 	<buildSpec>
+		<buildCommand>
+			<name>net.sourceforge.phpeclipse.parserbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>net.sourceforge.phpeclipse.phpnature</nature>
 	</natures>
 </projectDescription>
